<resources>
    <string name="app_name">Book Finder</string>

    <string name="splash_txt">Read Think Grow</string>
    <string name="buy_btn_txt">Buy</string>
    <string name="share_btn_txt">Suggest</string>
    <string name="preview_btn_txt">Preview</string>
    <string name="search_hint">Search books</string>
    <string name="searching_txt">Loading..</string>
    <string name="testhtml">
        <![CDATA[
            <font color="red" size="10" >Look For your book</font>
            <br>
            <font color="blue" size="100" >Finding your favourite <br> was never eazy before </font>
        ]]>

</string>

</resources>
