<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bf_white_bg"
                android:orientation="vertical">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bf_background"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/bf_text_white"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/app_title"
        android:layout_alignRight="@+id/app_title"
        android:layout_alignTop="@+id/app_title"
        android:src="@android:drawable/ic_menu_search"/>

    <io.branch.bookfinder.util.BFSearchBox
        android:id="@+id/search_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:layout_margin="2dp"
        android:background="@drawable/edit_txt_bg"
        android:gravity="center"
        android:hint="@string/search_hint"
        android:padding="2dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_txt"
        android:orientation="vertical">

        <GridView
            android:id="@+id/book_grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="2"
            android:verticalSpacing="3dp"
            android:layout_weight="10"/>


        <io.branch.bookfinder.util.BookCheckProgressView
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/bf_background"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_weight="1"
            android:gravity="center">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:padding="5dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_style"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/searching_txt"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/bf_text_white"/>

        </io.branch.bookfinder.util.BookCheckProgressView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/no_result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_txt"
        android:layout_margin="2dp"
        android:background="@color/bf_white_bg"
        android:visibility="gone">

        <TextView
            android:id="@+id/no_result_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/bf_background"
            android:gravity="center"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/bf_text_white"
            />

    </LinearLayout>


</RelativeLayout>