<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bf_black_bg"
    >

    <TextView
        android:id="@+id/book_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bf_background"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/bf_text_white"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/auth_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_title"
        android:background="@color/bf_translucent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/author_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/bf_translucent"
            android:gravity="left"
            android:maxLines="1"
            android:padding="2dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/bf_text_white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/publisher_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/bf_translucent"
            android:gravity="right"
            android:maxLines="1"
            android:padding="2dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/bf_text_white"
            android:textSize="15sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/detail_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/auth_info_layout"
        android:layout_margin="2dp"
        android:background="@color/bf_black_bg"/>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/detail_desc_txt"
        android:layout_alignLeft="@+id/detail_desc_txt"
        android:background="@android:color/transparent"
        android:numStars="5"
        android:padding="2dp"
        android:rating="4"
        android:theme="@style/Theme.Rating"/>


    <TextView
        android:id="@+id/detail_desc_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/option_bar_layout"
        android:layout_marginBottom="1dp"
        android:background="@color/bf_translucent"
        android:gravity="left"
        android:maxLines="10"
        android:padding="2dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/bf_text_white"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/option_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/bf_solid_blue"
        android:orientation="horizontal"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/buy_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@android:drawable/ic_menu_add"
                android:gravity="center"
                android:text="@string/buy_btn_txt"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/bf_text_white"
                android:textStyle="bold"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/preview_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@android:drawable/ic_menu_view"
                android:gravity="center"
                android:text="@string/preview_btn_txt"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/bf_text_white"
                android:textStyle="bold"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@android:drawable/ic_menu_share"
                android:gravity="center"
                android:text="@string/share_btn_txt"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/bf_text_white"
                android:textStyle="bold"
                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/preview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/book_title"
        android:background="@color/bf_white_bg"
        android:orientation="vertical"
        android:layout_margin="2dp"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bf_black_bg"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/bf_text_white"
            android:text="@string/preview_btn_txt"
            android:drawableLeft="@android:drawable/ic_menu_view"/>

        <WebView
            android:id="@+id/preview_web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </WebView>

    </LinearLayout>


</RelativeLayout>